--- a/mygurukool/public/index.html
+++ b/mygurukool/public/index.html
@@ -26,7 +26,14 @@
     -->
     <script src='https://meet.jit.si/external_api.js'></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <title>MyGuruKool</title>
+    <style>
+      body{
+            background-color: #E5E5E5 !important;
+        }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
